Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@perf@* - fail - Failed assertion: timestamp_frequency != 0, error: 0 == 0
(perf:1191) CRITICAL: Test assertion failure function init_sys_info, file ../tests/perf.c:891:
(perf:1191) CRITICAL: Failed assertion: timestamp_frequency != 0
(perf:1191) CRITICAL: Last errno: 2, No such file or directory
(perf:1191) CRITICAL: error: 0 == 0
Test perf failed.
**** DEBUG ****
(perf:1191) igt_core-INFO: IGT-Version: 1.24-g048f58513 (x86_64) (Linux: 5.5.0-rc1-g87c99602f2be-drmtip_414+ x86_64)
(perf:1191) DEBUG: Test requirement passed: stat("/proc/sys/dev/i915/perf_stream_paranoid", &sb) == 0
(perf:1191) DEBUG: Test requirement passed: stat("/proc/sys/dev/i915/oa_max_sample_rate", &sb) == 0
(perf:1191) drmtest-DEBUG: Test requirement passed: !(fd<0)
(perf:1191) igt_debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(perf:1191) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(perf:1191) igt_debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(perf:1191) ioctl_wrappers-DEBUG: Test requirement passed: dir >= 0
(perf:1191) ioctl_wrappers-DEBUG: Test requirement passed: err == 0
(perf:1191) DEBUG: timestamp_frequency = 0
(perf:1191) CRITICAL: Test assertion failure function init_sys_info, file ../tests/perf.c:891:
(perf:1191) CRITICAL: Failed assertion: timestamp_frequency != 0
(perf:1191) CRITICAL: Last errno: 2, No such file or directory
(perf:1191) CRITICAL: error: 0 == 0
(perf:1191) igt_core-INFO: Stack trace:
(perf:1191) igt_core-INFO: #0 ../lib/igt_core.c:1877 __igt_fail_assert()
(perf:1191) igt_core-INFO: #1 ../tests/perf.c:887 init_sys_info()
(perf:1191) igt_core-INFO: #2 [__real_main4551+0x3490]
**** END ****