UPSTREAM: drm/i915: Read rawclk_freq earlier

Read the rawclk_freq during runtime info probing, prior to its first use
in computing the CS timestamp frequency. Then store it in the runtime
info, and include it in the debug printouts.

Closes: https://gitlab.freedesktop.org/drm/intel/issues/834
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Reviewed-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
Link: https://patchwork.freedesktop.org/patch/msgid/20200216163445.555786-1-chris@chris-wilson.co.uk
(cherry picked from commit b04002f4dbee039feaf9ef814ba08c24a588e146)



BUG=b:168131866
TEST=Compile tested/Backported fixes identified with r-o-m/On-device testing with eve-kernelnext

Signed-off-by: Sean Paul <seanpaul@chromium.org>
Change-Id: Iaf2cc7a5b48914b978994d447e0d2fc14d09b68a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2405246
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>